--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <script src="./playkit.js" type="text/javascript"></script>
-  <script src="./youboralib.min.js" type="text/javascript"></script>
   <script src="./youbora-plugin.js" type="text/javascript"></script>
 </head>
 <body>
+  <script>
+    setTimeout(function() {
+      window.player = Playkit.playkit({
+        'sources': [{
+            "mimetype": "video/mp4",
+            "url": "./assets/mov_bbb.mp4",
+            "id": "12345"
+          }],
+        'plugins': {
+          'youbora': {
+            accountCode: 'powerdev'
+          }
+        }
+      })
+    }, 2000)
+  </script>
 </body>
 </html>
