--- a/samples/index.html
+++ b/samples/index.html
@@ -11,7 +11,7 @@
       window.player = Playkit.playkit({
         'sources': [{
             "mimetype": "video/mp4",
-            "url": "http://dgfgfd",
+            "url": "http://deslasexta.antena3.com/mp_series1/2012/09/10/00001.mp4",
             "id": "12345"
           }],
         'plugins': {
