--- a/samples/index.html
+++ b/samples/index.html
@@ -6,21 +6,20 @@
   <script src="./youbora.js"></script>
 </head>
 <body>
-  <script>
-    setTimeout(function() {
-      window.player = Playkit.playkit({
-        'sources': [{
-            "mimetype": "video/mp4",
-            "url": "http://deslasexta.antena3.com/mp_series1/2012/09/10/00001.mp4",
-            "id": "12345"
-          }],
-        'plugins': {
-          'youbora': {
-            accountCode: 'powerdev'
-          }
+<script>
+  setTimeout(function () {
+    window.player = Playkit.playkit({
+      'sources': [{
+        "mimetype": "video/mp4",
+        "url": "http://deslasexta.antena3.com/mp_series1/2012/09/10/00001.mp4"
+      }],
+      'plugins': {
+        'youbora': {
+          accountCode: 'powerdev'
         }
-      })
-    }, 2000)
-  </script>
+      }
+    });
+  }, 2000)
+</script>
 </body>
 </html>
