--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <script src="./playkit-js-youbora.js"></script>
+  <script src="./playkit-youbora.js"></script>
 </head>
 <body>
 <div id="player-placeholder"></div>
@@ -15,9 +15,9 @@
           "url": "http://deslasexta.antena3.com/mp_series1/2012/09/10/00001.mp4",
           "mimetype": "video/mp4",
           "id": "id1",
-          "width" : 200,
-          "height" : 100,
-          "bandwidth" : 100000,
+          "width": 200,
+          "height": 100,
+          "bandwidth": 100000,
           "label": "label1"
         }
       ]
