--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,14 @@
       ]
     },
     plugins: {
-      youbora: {}
+      youbora: {
+        'param1':'param-1',
+        'param2':'param-2',
+        'userId': "user-id"
+      }
     }
   });
+  window.p.play();
 </script>
 </body>
 </html>
