--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,7 @@
     },
     plugins: {
       youbora: {
-        'param1':'param-1',
-        'param2':'param-2',
-        'userId': "user-id"
+        'accountCode': 'powerdev'
       }
     }
   });
