fix(FEC-12059): [Youbora] Rendition values have a high number of "Undefined data" records

--- a/samples/index.html
+++ b/samples/index.html
@@ -15,7 +15,9 @@
       }],
       'plugins': {
         'youbora': {
-          accountCode: 'powerdev'
+          options: {
+            accountCode: 'powerdev'
+          }
         }
       }
     });
