--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     plugins: {
       youbora: {
         options: {
-          'accountCode': "kalturatest",
+          'accountCode': "YOUR_ACCOUNT_CODE",
           'user.name': 'yoni'
         }
       }
