--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       youbora: {
         options: {
           'accountCode': "YOUR_ACCOUNT_CODE",
-          'user.name': 'yoni'
+          'user.name': 'YOUR_NAME'
         }
       }
     }
