--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div id="player-placeholder" style="width: 640px; height: 360px;"></div>
+  <div> melicious tests!!!! </div>
 <script>
   const config = {
     logLevel: "DEBUG",
